--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "^7.0.0",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.6",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-svg": "13.4.0",
-    "styled-components": "^5.3.8",
-    "react-native-screens": "~3.20.0",
     "react-native-safe-area-context": "4.5.0",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
